--- a/src/public/menu-items/menu-items.html
+++ b/src/public/menu-items/menu-items.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 id="menu-categories-title" class="text-center">
     
-    {{ menuItems.name}} Menu
+    {{ menuItemsCtrl.menuItems.category.name}} Menu
   </h2>
   <div class="text-center">
     {{ menuItemsCtrl.menuItems.category.special_instructions}}
